<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="edvoraViewModel"
            type="com.jesse.edvaro.presentation.viewModel.EdvoraActivityViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.EdvoraActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_display_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/user_display_black"
            android:paddingVertical="16dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/app_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:text="@{edvoraViewModel.user.name}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/user_image_card_view"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Dhruv Singh" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/user_image_card_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/user_image_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/user_display_image"
                    android:scaleType="centerCrop"
                    imageSrcUrl="@{edvoraViewModel.user.url}"
                    tools:src="@drawable/user_photo" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/ride_identification_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rides_text"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_display_layout" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/ride_category_tab"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/light_black"
            app:layout_constraintEnd_toStartOf="@+id/filter_button"
            app:layout_constraintStart_toEndOf="@+id/ride_identification_tv"
            app:layout_constraintTop_toBottomOf="@+id/user_display_layout"
            app:tabGravity="start"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorFullWidth="false"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/TextAppearance.AppCompat.Caption"
            app:tabTextColor="@color/grey">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearest"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past" />
        </com.google.android.material.tabs.TabLayout>

        <Button
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/ic_filter_left"
            android:text="@string/filter"
            android:textAllCaps="false"
            android:clickable="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_display_layout"
            android:focusable="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/edvora_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/ride_card_item"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:clipChildren="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ride_category_tab"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <RelativeLayout
            android:id="@+id/dim_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#97000000"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>