...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/state_dropdown_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:hint="@string/state"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="5dp"
...
                android:inputType="none"
                 />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_dropdown_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:hint="@string/state"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/dropdown_menu_color"
...
